# DiabetesClassification

./: .gitignore  Makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: __init__.py  core.py  diagnosis.pkl  features.py
