[flake8]
ignore="E203,W503,F632,E266,E731,E712,E741"
max-line-length=80

[pycodestyle]
max-line-length = 80
ignore = E266,E302,E71,E501,W6
in-place = true
recursive = true
aggressive = 3
count = False
statistics = True

[metadata]
name=Diabetes Diagnosis
version=0.1.0
description=Make use of ID3 algorithm to diagnose diabetes based on the health index of the patients
#FIXME:README.md?
long_description=file: README.md
author=Nguyễn Khắc Trường
author_email=johnkt12qz@gmail.com
url=https://github.com/pseudoCode34/DiabetesDiagnosis

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.7, <4
install_requires =
pandas >= 1.5.1
scikit_learn >= 1.1.3
pydotplus >= 2.0.2
graphviz >= 2.50.2
ipython>=8.6.0
streamlit>=1.11.0
pickle>=0.7.5

[options.extras_require]
notebook = jupyter>=1.0.0
black>=22.1.0
flake8>=4.0.1

